# IaCCreator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.override.yml  docker-compose.testers.yml  docker-compose.yml  push-images.bat  pyproject.toml  requirements.txt
app/: __init__.py  exception_handlers.py  exceptions.py  logging_config.py  main.py
data/: db.json
docs/: IMPLEMENTATION_PLAN_CANVAS_UX.md  backend-api.md  backend-generators.md  backend-models.md  backend-services.md  database.md  frontend-components.md  frontend-state-and-utils.md  new-and-updated-icons.txt  persistence.md  testing.md
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
scripts/: checkpoint_generators.py
tests/: conftest.py  test_amplify_generator.py  test_analytics_to_games_generator_properties.py  test_analytics_to_games_registration.py  test_api_gateway_backward_compat.py  test_api_gateway_generator.py  test_app_runner_generator.py  test_appstream_generator.py  test_athena_generator.py  test_aurora_generator.py  test_batch_generator.py  test_cloudsearch_generator.py  test_codebuild_generator.py  test_codecommit_generator.py  test_codedeploy_generator.py  test_codepipeline_generator.py  test_compute_generator_properties.py  test_compute_services_registration.py  test_connect_generator.py  test_connection_handler_registry.py  test_connection_handlers_new.py  test_cors_and_wiring.py  test_diagram_crud.py  test_diagram_router.py  test_documentdb_generator.py  test_factory.py  (+46 more)
(+546 files in other folders)
